# magma

./: .clang-format  CMakeLists.txt  CMakePresets.json  MagmaConfig.cmake.in  Readme.md
cmake/Dependencies/: GoogleTest.cmake  MagmaDemo.cmake  SpdLog.cmake
cmake/Modules/: MagmaCompileShader.cmake
cmake/Scripts/: ForceColoredOutput.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Warnings.cmake
doc/: magma.drawio
include/magma/: EngineInfo.hpp  Instance.hpp  Instance.inl  Version.hpp.in
include/magma/glfw/: GlfwError.hpp  GlfwStack.hpp
include/magma/stdx/: Algorithm.hpp  Memory.hpp  Name.hpp  TypeTraits.hpp
include/magma/utils/: Algorithm.hpp  Memory.hpp  Name.hpp  TypeTraits.hpp  VkUtils.hpp
include/magma/vkx/: VkUtils.hpp
src/: Instance.cpp
src/stdx/: Name.cpp
src/utils/: Name.cpp
test/: main.cpp
